(library
 (name extism)
 (public_name extism)
 (inline_tests
  (deps test/code.wasm test/code-functions.wasm test/loop.wasm))
 (libraries ctypes.foreign bigstringaf extism-manifest uuidm)
 (preprocess
  (pps ppx_yojson_conv ppx_inline_test)))

(mdx
 (libraries extism-manifest extism yojson)
 (deps test/code.wasm)
 (files :standard - *.mli))