(library
 (name extism)
 (public_name extism)
 (inline_tests
  (deps test/code.wasm test/code-functions.wasm test/loop.wasm))
 (libraries ctypes.foreign bigstringaf extism-manifest uuidm)
 (preprocess
  (pps ppx_yojson_conv ppx_inline_test)))

(mdx
 (libraries extism-manifest extism yojson)
 (package extism)
 (deps test/code.wasm)
 (enabled_if (not (= %{env:EXTISM_TEST_NO_LIB=} "1")))
 (files :standard - *.mli))
